@@ -657,6 +657,11 @@ int main(
 
           MXMLAddE(DE,NE);
 
+          AE = NULL;
+          MXMLCreateE(&AE,"name");
+          MXMLSetVal(AE,pbstat->name);
+          MXMLAddE(NE,AE);
+
           for (pat = pbstat->attribs;pat;pat = pat->next)
             {
             AE = NULL;
