@@ -13,6 +13,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - pbs_server can also use PBS_SCHEDULER_SERVICE_PORT env var.
   e - add "other" resource to pelog's 5th argument
   b - stop possible memory corruption with an invalid request type (StockholmU)
+  b - add node name to pbsnodes XML output (NCIFCRF)
 
 2.1.6
   b - freebsd5 build fix
